# python-cardgame-framework

./: README.md  pyproject.toml
python_cardgame_framework/: Card.py  Hand.py  deck.py
tests/: test_python_cardgame_framework.py
